#1126: [add-on] Show required icon for mandatory fields

--- a/demo/addons/oneMessage.html
+++ b/demo/addons/oneMessage.html
@@ -39,6 +39,8 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
+    // You can enable the add-on via HTML attributes
+    // <form data-bv-addons="oneMessage, otherAddOn, anotherOne">
     $('#defaultForm')
         .bootstrapValidator({
             addOns: {
