#1126: Don't show the required icon if the field is not empty

--- a/demo/addons/requiredIcon.html
+++ b/demo/addons/requiredIcon.html
@@ -25,7 +25,7 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Name</label>
                         <div class="col-sm-5">
-                            <input type="text" class="form-control" name="name" />
+                            <input type="text" class="form-control" name="name" value="Product name" />
                         </div>
                     </div>
 
