--- a/demo/addons/multilingual.html
+++ b/demo/addons/multilingual.html
@@ -3,22 +3,22 @@
 <head>
     <title>BootstrapValidator demo</title>
 
-    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="../dist/css/bootstrapValidator.css"/>
+    <link rel="stylesheet" href="../../vendor/bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="../../dist/css/bootstrapValidator.css"/>
 
-    <script type="text/javascript" src="../vendor/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../dist/js/bootstrapValidator.js"></script>
-    <script type="text/javascript" src="../dist/js/language/vi_VN.js"></script>
-    <script type="text/javascript" src="../dist/js/language/fr_FR.js"></script>
-    <script type="text/javascript" src="../src/js/addon/multilingual.js"></script>
+    <script type="text/javascript" src="../../vendor/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../dist/js/bootstrapValidator.js"></script>
+    <script type="text/javascript" src="../../dist/js/language/vi_VN.js"></script>
+    <script type="text/javascript" src="../../dist/js/language/fr_FR.js"></script>
+    <script type="text/javascript" src="../../src/js/addon/multilingual.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-sm-8 col-sm-offset-2">
                 <div class="page-header">
-                    <h2>Change the locale example</h2>
+                    <h2>multilingual add-on</h2>
                 </div>
 
                 <p>
@@ -27,7 +27,7 @@
                     <button type="button" class="btn btn-default setLocaleButton" data-locale="fr_FR">Use French package</button>
                 </p>
 
-                <form id="registrationForm" method="post" class="form-horizontal">
+                <form id="defaultForm" method="post" class="form-horizontal" action="/demo/target.php">
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Username</label>
                         <div class="col-sm-5">
@@ -89,85 +89,88 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-    $('#registrationForm').bootstrapValidator({
-        addOns: {
-            multilingual: {}
-        },
-        feedbackIcons: {
-            valid: 'glyphicon glyphicon-ok',
-            invalid: 'glyphicon glyphicon-remove',
-            validating: 'glyphicon glyphicon-refresh'
-        },
-        fields: {
-            username: {
-                validators: {
-                    notEmpty: {
-                    },
-                    stringLength: {
-                        min: 6,
-                        max: 30
-                    },
-                    regexp: {
-                        regexp: /^[a-zA-Z0-9]+$/
-                    },
-                    different: {
-                        field: 'password',
-                        message: {
-                            en_US: 'The username and password cannot be the same',
-                            vi_VN: 'Mật khẩu và tên đăng nhập phải khác nhau'
+    // You can enable the add-on via HTML attributes
+    // <form data-bv-addons="multilingual, otherAddOn, anotherOne">
+    $('#defaultForm')
+        .bootstrapValidator({
+            addOns: {
+                multilingual: {}
+            },
+            feedbackIcons: {
+                valid: 'glyphicon glyphicon-ok',
+                invalid: 'glyphicon glyphicon-remove',
+                validating: 'glyphicon glyphicon-refresh'
+            },
+            fields: {
+                username: {
+                    validators: {
+                        notEmpty: {
+                        },
+                        stringLength: {
+                            min: 6,
+                            max: 30
+                        },
+                        regexp: {
+                            regexp: /^[a-zA-Z0-9]+$/
+                        },
+                        different: {
+                            field: 'password',
+                            message: {
+                                en_US: 'The username and password cannot be the same',
+                                vi_VN: 'Mật khẩu và tên đăng nhập phải khác nhau'
+                            }
                         }
                     }
-                }
-            },
-            email: {
-                validators: {
-                    notEmpty: {
-                    },
-                    emailAddress: {
-                    }
-                }
-            },
-            password: {
-                validators: {
-                    notEmpty: {
-                    },
-                    stringLength: {
-                        min: 8
-                    },
-                    different: {
-                        field: 'username',
-                        message: function(validator, $field, validatorName) {
-                            return {
-                                en_US: 'The password can\'t be same as username',
-                                vi_VN: 'Mật khẩu phải khác tên đăng nhập'
-                            };
+                },
+                email: {
+                    validators: {
+                        notEmpty: {
+                        },
+                        emailAddress: {
                         }
                     }
-                }
-            },
-            birthday: {
-                validators: {
-                    notEmpty: {
-                    },
-                    date: {
-                        format: 'YYYY/MM/DD'
+                },
+                password: {
+                    validators: {
+                        notEmpty: {
+                        },
+                        stringLength: {
+                            min: 8
+                        },
+                        different: {
+                            field: 'username',
+                            message: function(validator, $field, validatorName) {
+                                return {
+                                    en_US: 'The password can\'t be same as username',
+                                    vi_VN: 'Mật khẩu phải khác tên đăng nhập'
+                                };
+                            }
+                        }
                     }
-                }
-            },
-            gender: {
-                validators: {
-                    notEmpty: {
+                },
+                birthday: {
+                    validators: {
+                        notEmpty: {
+                        },
+                        date: {
+                            format: 'YYYY/MM/DD'
+                        }
+                    }
+                },
+                gender: {
+                    validators: {
+                        notEmpty: {
+                        }
                     }
                 }
             }
-        }
-    });
+        });
 
     // Change the locale
     $('.setLocaleButton').on('click', function() {
         $('.setLocaleButton').removeClass('btn-primary').addClass('btn-default');
         $(this).removeClass('btn-default').addClass('btn-primary');
-        $('#registrationForm').bootstrapValidator('setLocale', $(this).attr('data-locale'));
+        $('#defaultForm').bootstrapValidator('setLocale', $(this).attr('data-locale'));
     });
 });
 </script>
