#1126: Enable/disable oneMessage add-on for particular field

--- a/demo/addons/oneMessage.html
+++ b/demo/addons/oneMessage.html
@@ -41,35 +41,38 @@
 $(document).ready(function() {
     // You can enable the add-on via HTML attributes
     // <form data-bv-addons="oneMessage, otherAddOn, anotherOne">
-    $('#defaultForm')
-        .bootstrapValidator({
-            addOns: {
-                oneMessage: {}
-            },
-            feedbackIcons: {
-                valid: 'glyphicon glyphicon-ok',
-                invalid: 'glyphicon glyphicon-remove',
-                validating: 'glyphicon glyphicon-refresh'
-            },
-            fields: {
-                username: {
-                    validators: {
-                        notEmpty: {
-                            message: 'The username is required and cannot be empty'
-                        },
-                        stringLength: {
-                            min: 6,
-                            max: 30,
-                            message: 'The username must be more than 6 and less than 30 characters long'
-                        },
-                        regexp: {
-                            regexp: /^[a-zA-Z0-9]+$/,
-                            message: 'The username can only consist of alphabetical and digits'
-                        }
+    $('#defaultForm').bootstrapValidator({
+        addOns: {
+            // Show only one message for fields
+            // oneMessage: {}
+            oneMessage: {
+                username: true
+            }
+        },
+        feedbackIcons: {
+            valid: 'glyphicon glyphicon-ok',
+            invalid: 'glyphicon glyphicon-remove',
+            validating: 'glyphicon glyphicon-refresh'
+        },
+        fields: {
+            username: {
+                validators: {
+                    notEmpty: {
+                        message: 'The username is required and cannot be empty'
+                    },
+                    stringLength: {
+                        min: 6,
+                        max: 30,
+                        message: 'The username must be more than 6 and less than 30 characters long'
+                    },
+                    regexp: {
+                        regexp: /^[a-zA-Z0-9]+$/,
+                        message: 'The username can only consist of alphabetical and digits'
                     }
                 }
             }
-        });
+        }
+    });
 });
 </script>
 </body>
