--- a/demo/html5.html
+++ b/demo/html5.html
@@ -64,7 +64,7 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Fav color</label>
                         <div class="col-lg-3">
-                            <input class="form-control" name="color" type="color" required data-bv-hexcolor-message="The input is not a valid color code" />
+                            <input class="form-control" name="color" type="color" required data-bv-color-message="The input is not a valid color code" />
                         </div>
                     </div>
 
