--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>BootstrapValidator test suites</title>
+    <title>FormValidation test suites</title>
 
     <link rel="stylesheet" href="../vendor/jasmine/jasmine.css">
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.css"/>
