--- a/demo/uikit/form.html
+++ b/demo/uikit/form.html
@@ -14,6 +14,15 @@
 
     <script type="text/javascript" src="../../dist/js/formValidation.js"></script>
     <script type="text/javascript" src="../../dist/js/framework/uikit.js"></script>
+
+    <style type="text/css">
+    body {
+        margin-bottom: 50px;
+    }
+    form {
+        margin-top: 50px;
+    }
+    </style>
 </head>
 <body>
     <div class="uk-width-1-2 uk-container-center">
@@ -64,7 +73,9 @@
                     </div>
                 </div>
 
-                <button type="submit" class="uk-button uk-button-primary">Submit</button>
+                <div class="uk-form-row">
+                    <button type="submit" class="uk-button uk-button-primary">Submit</button>
+                </div>
             </fieldset>
         </form>
 
