#1204: Small improvement when working with Foundation tooltip

--- a/demo/foundation/tooltip.html
+++ b/demo/foundation/tooltip.html
@@ -160,7 +160,9 @@ $(document).ready(function() {
             validating: 'fa fa-refresh',
             feedback: 'fv-control-feedback'
         },
-        container: 'tooltip',
+        err: {
+            container: 'tooltip'
+        },
         fields: {
             firstName: {
                 row: '.small-6',
