--- a/demo/uikit/tooltip.html
+++ b/demo/uikit/tooltip.html
@@ -141,7 +141,9 @@
 $(document).ready(function() {
     $('form').formValidation({
         framework: 'uikit',
-        container: 'tooltip',
+        err: {
+            container: 'tooltip'
+        },
         icon: {
             valid: 'fa fa-check',
             invalid: 'fa fa-times',
