--- a/demo/multiple.html
+++ b/demo/multiple.html
@@ -119,7 +119,9 @@ $(document).ready(function() {
             invalid: 'glyphicon glyphicon-remove',
             validating: 'glyphicon glyphicon-refresh'
         },
-        container: 'tooltip',
+        err: {
+            container: 'tooltip'
+        },
         fields: {
             gender: {
                 validators: {
