--- a/demo/container3.html
+++ b/demo/container3.html
@@ -85,7 +85,9 @@
 $(document).ready(function() {
     $('#defaultForm').bootstrapValidator({
         message: 'This value is not valid',
-        container: 'tooltip',
+        err: {
+            container: 'tooltip'
+        },
         icon: {
             valid: 'glyphicon glyphicon-ok',
             invalid: 'glyphicon glyphicon-remove',
@@ -142,7 +144,7 @@ $(document).ready(function() {
                 }
             },
             email: {
-                container: 'popover',
+                err: 'popover',
                 validators: {
                     emailAddress: {
                         message: 'The input is not a valid email address'
@@ -150,7 +152,7 @@ $(document).ready(function() {
                 }
             },
             password: {
-                container: 'popover',
+                err: 'popover',
                 validators: {
                     notEmpty: {
                         message: 'The password is required and cannot be empty'
