--- a/demo/tooltip.html
+++ b/demo/tooltip.html
@@ -49,7 +49,9 @@
 <script type="text/javascript">
 $(document).ready(function() {
     $('#defaultForm').bootstrapValidator({
-        container: 'tooltip',
+        err: {
+            container: 'tooltip'
+        },
 //        trigger: 'blur',
         icon: {
             valid: 'glyphicon glyphicon-ok',
